fix: adjust margin for demo button on overview page

--- a/packages/docs/src/css/custom.css
+++ b/packages/docs/src/css/custom.css
@@ -389,6 +389,10 @@ html[data-theme='light'] .tsd-flag-public {
   width: 200px;
 }
 
+#open-ptct-button p {
+  margin: 0px;
+}
+
 a.card > h2 {
   font-size: 1.5rem;
 }
